# hangry-games

./: .gitignore  README.md  package-lock.json  package.json
hangry_games/: .env  Cargo.toml  Dioxus.toml  diesel.toml  hangry  index.html  tailwind.config.js
hangry_games/assets/: hangry-games.css  tailwind.css
hangry_games/entity/: Cargo.toml
hangry_games/entity/src/: area.rs  lib.rs
hangry_games/migration/: Cargo.toml
hangry_games/migration/src/: lib.rs  m20220101_000001_create_area_table.rs  m20240810_224544_add_areas.rs  m20240822_000021_create_tribute_table.rs  main.rs
hangry_games/migrations/2024-08-22-201724_create-areas/: down.sql  up.sql
hangry_games/migrations/2024-08-22-201724_create_areas/: down.sql  up.sql
hangry_games/migrations/2024-08-23-194307_add-areas/: down.sql  up.sql
hangry_games/migrations/2024-08-23-210421_create-tribute/: down.sql  up.sql
hangry_games/migrations/2024-08-23-210421_create_tribute/: down.sql  up.sql
hangry_games/migrations/2024-08-23-230235_tribute-area-relationship/: down.sql  up.sql
hangry_games/migrations/2024-08-25-154102_create-and-add-actions/: up.sql
hangry_games/migrations/2024-08-25-154102_create_actions/: down.sql  up.sql
hangry_games/migrations/2024-08-25-164414_tribute-action-relationship/: down.sql  up.sql
hangry_games/migrations/2024-08-26-000813_create-games/: down.sql  up.sql
hangry_games/migrations/2024-08-26-172238_add-game_id-field/: down.sql  up.sql
hangry_games/migrations/2024-08-26-191149_add-day-field/: down.sql  up.sql
hangry_games/migrations/2024-08-29-192234_add-closed-areas/: down.sql
hangry_games/migrations/2024-08-29-192234_add_closed_areas/: up.sql
hangry_games/src/: animals.rs  area.rs  areas.rs  cli.rs  db.rs  events.rs  games.rs  item_name_generator.rs  items.rs  lib.rs  llm.rs  main.rs  messages.rs  models.rs  output.rs  schema.rs  tributes.rs
(+93 files in other folders)
