[package]
name = "hangry_games"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.30"
tokio = { version="1.39.2", features=["full"] }
clap = { version = "4.5.16", features = ["derive", "unicode"] }
diesel = { version = "2.2.2", features = ["chrono", "postgres"] }
fake = { version = "2.9.2", features = ["derive"] }
chrono = "0.4.38"
witty-phrase-generator = "0.2.0"
